--- a/PCARC_Daisy_Rep.html
+++ b/PCARC_Daisy_Rep.html
@@ -43,9 +43,25 @@
 
     <main>
         <h1> Daisy Repeater Info</h1>
-        <h2>Coming Soon</h2>
-        <img src="">
-          
+        <img src="./Images/DaisyRepB.jpg"style="float: left;width:50%; height:50%">
+        <img src="./Images/DaisyRepA.jpg"style="width:50%; height:50%">
+        <div class="border-container2">
+        <h2>145.210 </h2>
+The Daisy 145.210 repeater is located on Bald Mountain in southern Pittsburg county. 
+ "210" is built from a 110W continuous duty GE Mastr III repeater station.  
+ Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 442.400 repeater. 
+ Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
+ Even though 210 and 400 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
+ 442.400 
+</div>
+<div class="border-container2">
+ <h2>442.400 </h2>
+ The Daisy 442.400 repeater is located on Bald Mountain in southern Pittsburg county and serves as the hub for our linked repeater system. 
+ "400" is built from a 75W continuous duty Motorola Micor repeater station.  
+ Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 145.210 repeater. 
+ Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
+ Even though 400 and 210 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
+</div>        
     </main>
     <footer>
       <div class="float-container3">
