--- a/PCARC_about.html
+++ b/PCARC_about.html
@@ -6,6 +6,7 @@
         <title>About PCARC</title>
         <link rel="stylesheet" href="./styles.css">
         <style> 
+         
         </style>
     </head>
 
@@ -51,14 +52,11 @@
          
         <div class="border-container2">
             <h2>PCARC CLUB OFFICERS</h2>
-            <ul>
-                <li>PRESIDENT:                             -        </li>
+            <ul id="remove">
+                <li>PRESIDENT:            Dustin Fry       - KI5REC </li>
                 <li>VICE PRESIDENT:       John Patty       - KI5KLC </li>
                 <li>SECRETARY/TREASURER:  Matt Weeks       - W5KVV  </li>
                 <li>TRUSTEE:              Terry Dalpoas    - KM5UQ  </li>
-                <li>PUBLICITY DIRECTOR:                    -        </li>
-                <li>PROGRAM DIRECTOR:                      -        </li>
-                <li>SOCIAL DIRECTOR:                       -        </li>
                 <li>SKYWARN COORDINATOR:  Jered Weeks      - W5BJG  </li>
                 <li>WEBMASTER:            John Patty       - KI5KLC </li>
             </ul>                      
