--- a/PCARC_aprs.html
+++ b/PCARC_aprs.html
@@ -47,7 +47,7 @@
                 These messages can be sent digitally or via an analogue signal. An Ametur Radio License is required to send this information but not necesseraily to recive.
                 See the links below for mor information regarding APRS. 
             </p>
-            <ul>
+            <ul id="remove">
                 <li><a href="http://www.aprs.org/" target="_blank">APRS Information</a> </li>
                 <li><a href="https://aprsdirect.de/?center=34.9288,-95.7596&zoom=11" target="_blank">APRS Direct</a></li>
                 <li><a href="https://aprs.fi/#!mt=roadmap&z=11&timerange=43200&tail=43200&lat=34.94040&lng=-95.83530" target="_blank">APRS.FI</a></li>
