--- a/PCARC_membership.html
+++ b/PCARC_membership.html
@@ -39,6 +39,7 @@
 
     <main>
         <div class="border-container">
+            <center>
             <p> 
                 <h2>PCARC Membership</h2>
                     <!--Work on formating of text.-->
@@ -64,6 +65,7 @@
         <h2>For more information regarding membership, donation & payment options, please visit the <a href="PCARC_support.html">Support PCARC</a> tab. </h2>
     </p>
             </p>
+        </center>
         </div>
     </main>
 
