--- a/PCARC_stuart_Rep.html
+++ b/PCARC_stuart_Rep.html
@@ -42,9 +42,20 @@
     </nav>
 
     <main>
-        <h1> Stuart Repeater Info</h1>
-        <h2>Coming Soon</h2>
-        <img src="">
+        <main>
+            <h1> Stuart Repeater Info</h1>
+            <img src="./Images/StuartRepA.jpg"style="width:50%; height:50%">
+            <!--<img src=""style="float: left;width:50%; height:50%">
+            <img src=""style="width:50%; height:50%">-->
+            <div class="border-container2">
+            <h2>146.895 </h2>
+    
+    </div>
+    <div class="border-container2">
+     <h2>443.725</h2>
+     
+    </div>        
+        </main>
     </main>
     <footer>
       <div class="float-container3">
