--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>
         <header>
             <div class="clearfix">
-                <div class="float-container3">
-                    <img src= "./Images/pcarcLogo.jpg " style= "float: left; width:250%; height:250%;">
-                </div>
-                <center>
-                    <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-                </center>
+            <div class="float-container3">
+            <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
+        </div>    
+        <center>
+            <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
+        </center>
             </div>
         </header>
     
@@ -67,7 +67,7 @@
         <div class="border-container4">
             <h2>Upcoming Events</h2>
             <p>
-                <ul>
+                <ul id="remove">
                     <li>September 7, 2023 - Meeting</li>
                 </ul>
             </p>
@@ -105,7 +105,7 @@
           </center>
         <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("Oct 5, 2023 19:00:00").getTime();
+            var countDownDate = new Date("Nov 2, 2023 19:00:00").getTime();
             // Update the count down every 1 second
             var x = setInterval(function() {
                 // Get today's date and time
@@ -130,19 +130,19 @@
 
     <footer>
         <div class="float-container3">
-            <img src= "./Images/emcom.jpg " style="float: left;width:125%; height:125%">
+            <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
         </div>
         <center>
-            <p>
-                &copy; [2023] PCARC All rights reserved.
-            </p>
-            <p>
-                Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-            </p>
-            <p>
-                Established 1954. A 501(c)(3) Organization
-            </p>
-        </center>
+        <p>
+            &copy; [2023] PCARC All rights reserved.
+        </p>
+        <p>
+            Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
+        </p>
+        <p>
+            Established 1954. A 501(c)(3) Organization
+        </p>
+    </center>
     </footer>
 </body>
 </html>
