--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
          <meta name="keywords" content="Pittsburg County" />
          <meta name="keywords" content="PCARC" />
          <meta name="keywords" content="W5CUQ" />
+         <meta name="robots" content="max-image-preview:large">
+<meta name="description" content="W5CUQ Pittsburg County Amateur Radio Club Inc.  McAlester, Oklahoma Established 1954">
+<meta name="robots" content="index,follow">
+<link rel="canonical" href="https://www.w5cuq.com/">
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Pittsburg County Amateur Radio Club (PCARC), Pittsburg County Amateur Radio Club (PCARC)">
+<meta property="og:description" content="W5CUQ Pittsburg County Amateur Radio Club Inc.  McAlester, Oklahoma Established 1954">
+<meta property="og:url" content="https://www.w5cuq.com/">
+<meta property="og:site_name" content="Pittsburg County Amateur Radio Club (PCARC)">
 
         <title>PCARC (W5CUQ)</title>
         <link rel="stylesheet" href="./styles.css">
