Updating with the current testing fees.

--- a/PCARC_testing.html
+++ b/PCARC_testing.html
@@ -65,7 +65,7 @@
                     or be able to show proof of the license in the official FCC database.      </li>
                 <li> Two number two pencils with erasers and a pen       </li>
                 <li> A calculator with the memory erased and formulas cleared is allowed.         </li>
-                <li>  Bring a check, a money order or cash to cover the exam session fee(s).      </li>
+                <li>  Bring a check, a money order or cash to cover the exam session fee(s). (This amount is currently $15.00)      </li>
                 <li> Be aware that some information about you will be made publicly available
                     on the FCC's website      </li>
                 
