--- a/PCARC_Daisy_Rep.html
+++ b/PCARC_Daisy_Rep.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PCARC Stuart Site</title>
+    <title>PCARC Daisy Site</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="./script.js" defer></script>
     <style>
