--- a/PCARC_repeaters.html
+++ b/PCARC_repeaters.html
@@ -11,14 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="clearfix">
-        <div class="float-container3">
-        <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-    </div>
-    <center>
-        <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-    </center>
-        </div>
+        <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
     </header>
 
     <nav>
@@ -55,8 +48,8 @@
             <li>Stuart Digipeater	Down	Stuart, OK	   EM14WW <a href="PCARC_stuart_Rep.html"> Repeater Info (Coming Soon)    </a> </li>
         </ul>     
         </div>
-
-        <div class="border-container2">
+ 
+       <!--<div class="border-container2">
             <h2>Pictures from our sites</h2>
         <ul id="remove">
             <li><a href="PCARC_shady.html"> McAlester, OK (Coming Soon)         </a> EM25CA </li>
@@ -64,24 +57,11 @@
             <li><a href="PCARC_stuart.html"> Stuart, OK            </a> EM14WW </li>
             <li><a href="PCARC_eoc.html"> Pittsburg County EOC, OK </a>        </li>
         </ul>       
-        </div>
+        </div>-->
     </center>
     </main>
     <footer>
-        <div class="float-container3">
-            <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-        </div>
-        <center>
-        <p>
-            &copy; [2023] PCARC All rights reserved.
-        </p>
-        <p>
-            Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-        </p>
-        <p>
-            Established 1954. A 501(c)(3) Organization
-        </p>
-    </center>
+        <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
     </footer>
 </body>
 </html>
