--- a/PCARC_Daisy_Rep.html
+++ b/PCARC_Daisy_Rep.html
@@ -15,72 +15,71 @@
 </head>
 <body>
   <header>
-    <div class="clearfix">
-    <div class="float-container3">
-    <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-</div>
-    </div>
-<center>
-    <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-</center>
-    </div>
+    <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
   </header>
 
-    <nav>
-        <a href= "index.html">Home</a>
-        <a href="PCARC_meetings.html">Club Meetings</a>
-        <a href="PCARC_about.html">About PCARC</a>
-        <a href="PCARC_contact.html">Contact Us</a>
-        <a href="PCARC_repeaters.html">Club Repeaters</a>
-        <a href="PCARC_etiquette.html">Repeater Etiquette</a>
-        <a href="PCARC_support.html">Support PCARC</a>
-        <a href="PCARC_membership.html">Membership</a>
-        <a href="PCARC_constitution.html">PCARC Constitution</a>
-        <a href="PCARC_aprs.html">APRS</a>
-        <a href="PCARC_testing.html">Testing</a>
-        <a href="PCARC_events.html">Events and Meetings</a>  
-    </nav>
+  <nav>
+    <a href= "index.html">Home</a>
+    <a href="PCARC_meetings.html">Club Meetings</a>
+    <a href="PCARC_about.html">About PCARC</a>
+    <a href="PCARC_contact.html">Contact Us</a>
+    <a href="PCARC_repeaters.html">Club Repeaters</a>
+    <a href="PCARC_etiquette.html">Repeater Etiquette</a>
+    <a href="PCARC_support.html">Support PCARC</a>
+    <a href="PCARC_membership.html">Membership</a>
+    <a href="PCARC_constitution.html">PCARC Constitution</a>
+    <a href="PCARC_aprs.html">APRS</a>
+    <a href="PCARC_testing.html">Testing</a>
+    <a href="PCARC_events.html">Events and Meetings</a>  
+</nav>
 
-    <main>
-        <h1> Daisy Repeater Info</h1>
-        <img src="./Images/DaisyRepB.jpg"style="float: left;width:50%; height:50%">
-        <img src="./Images/DaisyRepA.jpg"style="width:50%; height:50%">
-        <img src="./Images/daisy/DaisyAntennas2.jpg"style="float: right;width:50%; height:50%">
-        <img src="./Images/daisy/DaisyAntennas.jpg"style="width:50%; height:50%">
-        <div class="border-container2">
-        <h2>145.210 </h2>
+<main>
+  <center>
+    <h1> Daisy Repeater Info</h1>
+    <img src="./Images/DaisyRepB.jpg"style="float: left;width:50%; height:50%">
+    <img src="./Images/DaisyRepA.jpg"style="width:50%; height:50%">
+    <div class="border-container2">
+    <h2>145.210 </h2>
 The Daisy 145.210 repeater is located on Bald Mountain in southern Pittsburg county. 
- "210" is built from a 110W continuous duty GE Mastr III repeater station.  
- Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 442.400 repeater. 
- Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
- Even though 210 and 400 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
- 442.400 
+"210" is built from a 110W continuous duty GE Mastr III repeater station.  
+Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 442.400 repeater. 
+Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
+Even though 210 and 400 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
+442.400 
 </div>
 <div class="border-container2">
- <h2>442.400 </h2>
- The Daisy 442.400 repeater is located on Bald Mountain in southern Pittsburg county and serves as the hub for our linked repeater system. 
- "400" is built from a 75W continuous duty Motorola Micor repeater station.  
- Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 145.210 repeater. 
- Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
- Even though 400 and 210 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
-</div>        
-    </main>
-    <footer>
-      <div class="float-container3">
-          <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-      </div>
-      <center>
-      <p>
-          &copy; [2023] PCARC All rights reserved.
-      </p>
-      <p>
-          Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-      </p>
-      <p>
-          Established 1954. A 501(c)(3) Organization
-      </p>
-  </center>
-
-  </footer>
+<h2>442.400 </h2>
+The Daisy 442.400 repeater is located on Bald Mountain in southern Pittsburg county and serves as the hub for our linked repeater system. 
+"400" is built from a 75W continuous duty Motorola Micor repeater station.  
+Control, IDs, courtesy tones, etc. are provided by the Audio Test Solutions RLC Club Deluxe controller, which also provides control for the 145.210 repeater. 
+Automated weather alerts are provided by the CAT WX-250 SAME weather alert receiver.  
+Even though 400 and 210 share the same controller, both repeaters can be separated with independent IDs, timers, etc., with the WX-250 being the only thing in common.
+</div>  
+<section aria-label="Daisy Repeater Site">
+    <div class="carousel" data-carousel>
+      <button class="carousel-button next"data-carousel-button="next"> &#8680; </button>
+      <button class="carousel-button prev"data-carousel-button="prev"> &#8678; </button>
+      <ul data-slides>
+        <li class="slide" data-active>
+          <img src="./Images/daisy/daisy.jpg">
+        </li>
+        <li class="slide">
+          <img src="./Images/daisy/365096965_593378229392535_1051016366798916207_n.jpg">      
+        </li>
+        <li class="slide">
+          <img src="./Images/daisy/365408493_1022300782136028_8186395433815054887_n.jpg">      
+        </li>
+        <li class="slide">
+          <img src="./Images/daisy/365663320_252893980940815_5423997270416546218_n.jpg">      
+       </li>
+      </ul>
+    </div>
+</section> 
+</center>         
+</main>
+<footer>
+    <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+</footer>
 </body>
 </html>
+
