--- a/PCARC_Enterprise_Rep.html
+++ b/PCARC_Enterprise_Rep.html
@@ -12,15 +12,7 @@
 </head>
 <body>
   <header>
-    <div class="clearfix">
-    <div class="float-container3">
-    <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-</div>
-</div>
-<center>
-    <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-</center>
-    </div>
+    <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
   </header>
 
     <nav>
@@ -41,27 +33,15 @@
     <main>
         <h1> Enterprise Repeater Info</h1>
         <h2>Coming Soon</h2>
-        <img src="">
-
+        <!--<img src="">
+        <center> 
+          <iframe src="PCARC_enterprise.html" width="25%" height="1000px" frameborder="0" scrolling="no"></iframe>
+           </center> 
           
-    
+          -->
     </main>
     <footer>
-      <div class="float-container3">
-          <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-      </div>
-      <center>
-      <p>
-          &copy; [2023] PCARC All rights reserved.
-      </p>
-      <p>
-          Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-      </p>
-      <p>
-          Established 1954. A 501(c)(3) Organization
-      </p>
-  </center>
-
+        <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
   </footer>
 </body>
 </html>
