--- a/PCARC_McAlester_Rep.html
+++ b/PCARC_McAlester_Rep.html
@@ -15,15 +15,7 @@
 </head>
 <body>
   <header>
-    <div class="clearfix">
-    <div class="float-container3">
-    <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-</div>
-    </div>
-<center>
-    <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-</center>
-    </div>
+    <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
   </header>
 
     <nav>
@@ -44,26 +36,15 @@
     <main>
         <h1> McAlester (Shady) Repeater Info</h1>
         <h2>Coming Soon</h2>
-        <img src="">
+        <!--<img src="">
+        <center> 
+          <iframe src="PCARC_shady.html" width="25%" height="1000px" frameborder="0" scrolling="no"></iframe>
+           </center> 
          
-    </div>
+    </div>-->
     </main>
     <footer>
-      <div class="float-container3">
-          <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-      </div>
-      <center>
-      <p>
-          &copy; [2023] PCARC All rights reserved.
-      </p>
-      <p>
-          Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-      </p>
-      <p>
-          Established 1954. A 501(c)(3) Organization
-      </p>
-  </center>
-
+        <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
   </footer>
 </body>
 </html>
