--- a/PCARC_fieldDay.html
+++ b/PCARC_fieldDay.html
@@ -15,13 +15,8 @@
     </head>
     <body>
       <header>
-        <div class="clearfix">
-        <div class="float-container3">
-        <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-    </div>
-    <center>
-        <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-    </center>
+        <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
+      </header>
     
         <nav>
             <a href= "index.html">Home</a>
@@ -95,21 +90,7 @@
           </section>    
         </main>
         <footer>
-          <div class="float-container3">
-              <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-          </div>
-          <center>
-          <p>
-              &copy; [2023] PCARC All rights reserved.
-          </p>
-          <p>
-              Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-          </p>
-          <p>
-              Established 1954. A 501(c)(3) Organization
-          </p>
-      </center>
-  
+          <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
       </footer>
     </body>
     </html>
