--- a/PCARC_support.html
+++ b/PCARC_support.html
@@ -11,14 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="clearfix">
-        <div class="float-container3">
-        <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-    </div>
-    <center>
-        <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-    </center>
-        </div>
+        <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
     </header>
     <nav>
         <a href= "index.html">Home</a>
@@ -46,43 +39,27 @@ The Pittsburg County Amateur Radio Club operates on dues from its members and do
 Club dues are $20.00 per 6 months / $40.00 per year. Monetary donations of any amount are greatly appreciated.
 </p>      
         </div> 
+        <p><center>
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="82RC296WGHPH4" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+            </center></p>
     <div class="border-container2">
+        
         <p> 
             <h2>Donations & dues can also be taken at club meetings or mailed to:</h2>
             PITTSBURG COUNTY AMATEUR RADIO CLUB INC<br>
             705 EOC DRIVE<br>
             McALESTER, OKLAHOMA 74501<br>
         </p>
-        <p> 
-            <center>
-            Donations can also be made via paypal: <br>
-            
-                <form action="https://www.paypal.com/donate" method="post" target="_top">
-                    <input type="hidden" name="hosted_button_id" value="82RC296WGHPH4" />
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                    <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-                    </form>
-                </center>
-        </p>
     </div> 
 </center>
     </main>
 
     <footer>
-        <div class="float-container3">
-            <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-        </div>
-        <center>
-        <p>
-            &copy; [2023] PCARC All rights reserved.
-        </p>
-        <p>
-            Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-        </p>
-        <p>
-            Established 1954. A 501(c)(3) Organization
-        </p>
-    </center>
+        <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
     </footer>
 </body>
 </html>
