--- a/PCARC_testing.html
+++ b/PCARC_testing.html
@@ -11,15 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="clearfix">
-        <div class="float-container3">
-        <img src= "./Images/pcarcLogo.jpg " style="float: left;width:100px; height:100px">
-    </div>
-
-    <center>
-        <h1>   Pittsburg County Amateur Radio Club (W5CUQ)</h1>
-    </center>
-</div>
+        <iframe src="Header.html" width="100%" height="105%" frameborder="0" scrolling="no"></iframe>
     </header>
     <nav>
         <a href= "index.html">Home</a>
@@ -65,7 +57,7 @@
                     or be able to show proof of the license in the official FCC database.      </li>
                 <li> Two number two pencils with erasers and a pen       </li>
                 <li> A calculator with the memory erased and formulas cleared is allowed.         </li>
-                <li>  Bring a check, a money order or cash to cover the exam session fee(s). (This amount is currently $15.00)      </li>
+                <li>  Bring a check, a money order or cash to cover the exam session fee(s).      </li>
                 <li> Be aware that some information about you will be made publicly available
                     on the FCC's website      </li>
                 
@@ -105,20 +97,7 @@
 </center>
     </main>
     <footer>
-       <div class="float-container3">
-            <img src= "./Images/emcom.jpg " style="float: left;width:100px; height:100px">
-        </div>
-        <center>
-        <p>
-            &copy; [2023] PCARC All rights reserved.
-        </p>
-        <p>
-            Pittsburg County Amateur Radio Club Inc. McAlester, Oklahoma
-        </p>
-        <p>
-            Established 1954. A 501(c)(3) Organization
-        </p>
-    </center>
+        <iframe src="Footer.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
     </footer>
 </body>
 </html>
