--- a/PCARC_Daisy_Rep.html
+++ b/PCARC_Daisy_Rep.html
@@ -36,8 +36,8 @@
 <main>
   <center>
     <h1> Daisy Repeater Info</h1>
-    <img src="./Images/DaisyRepB.jpg"style="float: left;width:50%; height:50%">
-    <img src="./Images/DaisyRepA.jpg"style="width:50%; height:50%">
+    <img src="./Images/daisy/DaisyRepB.jpg"style="float: left;width:50%; height:50%">
+    <img src="./Images/daisy/DaisyRepA.jpg"style="width:50%; height:50%">
     <div class="border-container2">
     <h2>145.210 </h2>
 The Daisy 145.210 repeater is located on Bald Mountain in southern Pittsburg county. 
