--- a/PCARC_about.html
+++ b/PCARC_about.html
@@ -52,9 +52,9 @@
                 <li>VICE PRESIDENT:       John Patty       - KI5KLC </li>
                 <li>SECRETARY/TREASURER:  Matt Weeks       - W5KVV  </li>
                 <li>TRUSTEE:              Terry Dalpoas    - KM5UQ  </li>
-                <li>PUBLICITY DIRECTOR:                    -        </li>
+                <!--<li>PUBLICITY DIRECTOR:                    -        </li>
                 <li>PROGRAM DIRECTOR:                      -        </li>
-                <li>SOCIAL DIRECTOR:                       -        </li>
+                <li>SOCIAL DIRECTOR:                       -        </li>-->
                 <li>SKYWARN COORDINATOR:  Jered Weeks      - W5BJG  </li>
                 <li>WEBMASTER:            John Patty       - KI5KLC </li>
             </ul>                      
