--- a/PCARC_repeaters.html
+++ b/PCARC_repeaters.html
@@ -46,18 +46,10 @@
             <li>Shady Digipeater	Down	McAlester, OK  EM25CA <a href="PCARC_McAlester_Rep.html"> Repeater Info (Coming Soon) </a> </li>
             <li>Daisy Digipeater	Down	 Daisy, OK	    EM25DP<a href="PCARC_Daisy_Rep.html"> Repeater Info (Coming Soon)     </a> </li>
             <li>Stuart Digipeater	Down	Stuart, OK	   EM14WW <a href="PCARC_stuart_Rep.html"> Repeater Info (Coming Soon)    </a> </li>
+            <li><a href="PCARC_eoc.html"> Emergency Operations Center Pictures </a> </li>
+      
         </ul>     
         </div>
- 
-       <!--<div class="border-container2">
-            <h2>Pictures from our sites</h2>
-        <ul id="remove">
-            <li><a href="PCARC_shady.html"> McAlester, OK (Coming Soon)         </a> EM25CA </li>
-            <li><a href="PCARC_daisy.html"> Daisy, OK              </a> EM24DP </li>
-            <li><a href="PCARC_stuart.html"> Stuart, OK            </a> EM14WW </li>
-            <li><a href="PCARC_eoc.html"> Pittsburg County EOC, OK </a>        </li>
-        </ul>       
-        </div>-->
     </center>
     </main>
     <footer>
