--- a/PCARC_stuart_Rep.html
+++ b/PCARC_stuart_Rep.html
@@ -32,24 +32,10 @@
         <a href="PCARC_testing.html">Testing</a>
         <a href="PCARC_events.html">Events and Meetings</a>  
     </nav>
-    <nav>
-      <a href= "index.html">Home</a>
-      <a href="PCARC_meetings.html">Club Meetings</a>
-      <a href="PCARC_about.html">About PCARC</a>
-      <a href="PCARC_contact.html">Contact Us</a>
-      <a href="PCARC_repeaters.html">Club Repeaters</a>
-      <a href="PCARC_etiquette.html">Repeater Etiquette</a>
-      <a href="PCARC_support.html">Support PCARC</a>
-      <a href="PCARC_membership.html">Membership</a>
-      <a href="PCARC_constitution.html">PCARC Constitution</a>
-      <a href="PCARC_aprs.html">APRS</a>
-      <a href="PCARC_testing.html">Testing</a>
-      <a href="PCARC_events.html">Events and Meetings</a>  
-  </nav>
 <main>
   <center>
           <h1> Stuart Repeater Info</h1>
-          <img src="./Images/StuartRepA.jpg"style="width:50%; height:50%">
+          <img src="./Images/Stuart/StuartRepA.jpg"style="width:50%; height:50%">
           <!--<img src=""style="float: left;width:50%; height:50%">
           <img src=""style="width:50%; height:50%">-->
           <div class="border-container2">
