--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             The Kiamichi Electric Cooperative <br>
             and Muskogee Communications for continued support.</h3>
         <p>
-            <a href="https://m.broadcastify.com/listen/feed/37948?fbclid=IwAR0vBi9M5xTOoswyCK86wajogYgJ098UQ_id-obcla37xCOt83CQLtLY2os" target="_blank">Listen to our linked repeaters on Broadcastify</a>
+            <a href=https://www.broadcastify.com/listen/feed/42893 target="_blank">Listen to our linked repeaters on Broadcastify</a>
         </p>
         <p>
             <center>
