--- a/PCARC_events.html
+++ b/PCARC_events.html
@@ -42,19 +42,21 @@
                
                     All club meetings are scheduled for 7:00 PM unless otherwise posted on our club facebook. Test sessions will follow after as long as they have been requested in advance.
                     <ul id="remove">
-                        <li>January   4, 2024 - Meeting  </li>               
-                        <li>February  1, 2024 - Meeting  </li>
-                        <li>March     7, 2024 - Meeting  </li>
-                        <li>April     4, 2024 - Meeting  </li>
-                        <li>May       2, 2024 - Meeting  </li>
-                        <li>June      6, 2024 - Meeting  </li>
-                        <li>July      6, 2024 - Meeting  </li>
+                        <li>January   4, 2024  - Meeting  </li>               
+                        <li>February  1, 2024  - Meeting  </li>
+                        <li>Febuary   17, 2024 - Fox Hunt 10:00 AM Pittsburg County EOC <a href="https://en.wikipedia.org/wiki/Transmitter_hunting" target="_blank">What is a Fox Hunt?</a></li>                        
+                        <li>March     7, 2024  - Meeting & Test Session  </li>
+                        <li>April     4, 2024  - Meeting  </li>
+                        <li>May       2, 2024  - Meeting  </li>
+                        <li>May       25, 2024 - Fox Hunt 10:00 AM Pittsburg County EOC  <a href="https://en.wikipedia.org/wiki/Transmitter_hunting" target="_blank">What is a Fox Hunt?</a></li>                     
+                        <li>June      6, 2024  - Meeting  </li>
+                        <li>July      6, 2024  - Meeting  </li>
                         <li><a href="http://www.arrl.org/field-day#:~:text=2024%20ARRL%20Field%20Day%20is%20June%2022-23&text=ARRL%20Field%20Day%20is%20always,4th%20full%20weekend%20in%20June." target="_blank">July 22&23, 2023 - Field Day</a>  (<a href="./PCARC_fieldDay.html">Pictures from previous Field Days)</a></li>
-                        <li>August    1, 2024 - Meeting  </li>
-                        <li>September 5, 2024 - Meeting & Test Session </li>
-                        <li>October   3, 2024 - Meeting & Test Session </li>
-                        <li>November  7, 2024 - Meeting & Test Session</li>
-                        <li>December  5, 2024 - Meeting  </li>
+                        <li>August    1, 2024  - Meeting  </li>
+                        <li>September 5, 2024  - Meeting  </li>
+                        <li>October   3, 2024  - Meeting  </li>
+                        <li>November  7, 2024  - Meeting  </li>
+                        <li>December  5, 2024  - Meeting  </li>
                     </ul> 
                 <p>
                     <a href="https://contests.arrl.org/calendar.php" target="_blank">ARRL Contests</a>    
