Correcting commenting out the wrong field.

--- a/PCARC_events.html
+++ b/PCARC_events.html
@@ -49,10 +49,10 @@
                         <li>March     6,  2025  - Meeting   </li>
                         <li>April     3,  2025  - Meeting  </li>
                         <li>May       1,  2025  - Meeting  </li>
-                        <li>May       25, 2025 - Fox Hunt 10:00 AM Pittsburg County EOC  <a href="https://en.wikipedia.org/wiki/Transmitter_hunting" target="_blank">What is a Fox Hunt?</a></li>                     
+                        <!--<li>May       25, 2025 - Fox Hunt 10:00 AM Pittsburg County EOC  <a href="https://en.wikipedia.org/wiki/Transmitter_hunting" target="_blank">What is a Fox Hunt?</a></li> -->
                         <li>June      5,  2025  - Meeting  </li>
                         <li>July      3,  2025  - Meeting  </li>
-                        <!--<li><a href="https://www.arrl.org/FIELD-DAY" target="_blank">June 28&29, 2025 - Field Day</a>  (<a href="./PCARC_fieldDay.html">Pictures from previous Field Days)</a></li> -->
+                        <li><a href="https://www.arrl.org/FIELD-DAY" target="_blank">June 28&29, 2025 - Field Day</a>  (<a href="./PCARC_fieldDay.html">Pictures from previous Field Days)</a></li>
                         <li>August    7,  2025  - Meeting  </li>
                         <li>September 4,  2025  - Meeting  </li>
                         <li>October   2,  2025  - Meeting  </li>
