--- a/PCARC_events.html
+++ b/PCARC_events.html
@@ -40,7 +40,7 @@
             <div class="border-container4">
                 <h2>2025 Scheduled Events And Meeting Dates</h2>
                
-                    All club meetings are scheduled for 7:00 PM unless otherwise posted on our club facebook. Test sessions will follow after as long as they have been requested in advance.
+                    All club meetings are scheduled for 7:00 PM unless otherwise posted on our <a href="https://www.facebook.com/groups/w5cuq/?ref=share&mibextid=aE13LE" target="_blank">club facebook page</a>. Test sessions will follow after as long as they have been requested in advance.
                     <ul id="remove">
                         
                         <li>January   2,  2025  - Meeting  </li>               
