--- a/PCARC_stuart_Rep.html
+++ b/PCARC_stuart_Rep.html
@@ -61,7 +61,7 @@ Controller: CAT 200B
 Duplexer: DB GE-P1 @ 91dB
 Repeater antenna: DB411 fed with AVA5-50
 Link antenna: Gulf Alpha 7E-LB fed with LMR-600
-725 is linked to S.W.I.R.A. via the 147.075 repeater in Davis, Oklahoma 73 miles away
+725 has a remote base that has the capability to connect to the SWIRA System
 </div> 
 <div class="border-container2">     
 <p>
@@ -88,7 +88,7 @@ Rack shelves and blank panels are Middle Atlantic
       <img src="./Images/stuart/Stuart1.jpg">
           The new 443.725 antenna has arrived! We're getting  <br>
           closer folks. Remember, 725 will have linking       <br>
-          capabilities to <a href="https://swira.link/" target="_blank">SWIRA</a> via the Davis repeater.<br>
+          capabilities to the <a href="https://swira.link/" target="_blank">SWIRA</a> system.<br>
           (Photo Courtesy of Matt Weeks)
     </li>
     <li class="slide">
